# terminus

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  config.cpp  config.h  dashboard.cpp  dashboard.h  main.cpp  speedtest.cpp  stress_test.cpp  stress_test.h  system_monitor.cpp  system_monitor.h  system_monitor_posix.cpp  terminal.cpp  terminal.h  theme.cpp  theme.h  ui_menus.cpp  ui_menus.h
resources/shaders/: crt.fsh
